Spacing fix

--- a/frontend/src/assets/sass/zone-at-a-glance.scss
+++ b/frontend/src/assets/sass/zone-at-a-glance.scss
@@ -137,10 +137,16 @@
       padding-top: 5px;
     }
 
+    .negative-office-margin
+    {
+      margin-left: -35px;
+    }
+
     .comp-zag-bar-spacing
     {
       padding-top: 5px;
       padding-bottom:  5px;
+      width:95%;
       
       .comp-zag-bar-spacer {
         width: 2px;
